...
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/myLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/topMapContainer"
        android:layout_marginRight="15dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button_white"
        android:elevation="20dp"
        android:minHeight="40dp"
        android:minWidth="40dp"
...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/campusSwitchBtnContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:foregroundGravity="center"
            android:orientation="horizontal"
...
                android:layout_marginRight="5dp"
                android:text="SGW">

            </Button>

            <Button
                android:id="@+id/loyolaBtn"
                style="SwitchCampusButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="Loyola">
            </Button>

        </LinearLayout>

    </LinearLayout>

...
