<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PathsActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="110dp">

            <ImageButton
                android:id="@+id/pathsPageBackButton"
                android:layout_width="30dp"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="#00FFFFFF"
                android:tint="@android:color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_arrow_back_24dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/path_fromText"
                app:layout_constraintTop_toTopOf="@+id/path_fromText"
                app:srcCompat="@drawable/ic_my_location_24dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/path_toText"
                app:layout_constraintTop_toTopOf="@+id/path_toText"
                app:srcCompat="@drawable/ic_place_white" />

            <TextView
                android:id="@+id/path_fromText"
                android:layout_width="303dp"
                android:layout_height="39dp"
                android:layout_marginTop="8dp"
                android:background="#29FFFFFF"
                android:clickable="true"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:text="@string/from_location"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.771"
                app:layout_constraintStart_toEndOf="@id/pathsPageBackButton"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/path_toText"
                android:layout_width="303dp"
                android:layout_height="39dp"
                android:layout_marginTop="60dp"
                android:background="#29FFFFFF"
                android:clickable="true"
                android:ems="10"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:text="@string/to_destination"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.771"
                app:layout_constraintStart_toEndOf="@id/pathsPageBackButton"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <fragment
        android:id="@+id/pathLocationFragment"
        android:name="com.example.concordia_campus_guide.fragments.LocationFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/path_info_card_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/path_info_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/rounded_corners"
            app:behavior_hideable="true"
            app:behavior_peekHeight="140dp"
            app:layout_behavior="@string/bottom_sheet_behavior">

            <FrameLayout
                android:id="@+id/path_info_card_frame"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
